# wetterstation

./: .gitignore  PLANNING.md  README.md  config.json  config.json.example  pyproject.toml  wetter_unicornhatmini.py  wetterstation.service
tests/: conftest.py  test_animations.py  test_config.py  test_display.py  test_renderer.py  test_state.py  test_transit.py  test_weather.py
wetterstation/: __init__.py  __main__.py  animations.py  config.py  display.py  input.py  renderer.py  simulator.py  state.py  transit.py  weather.py
